fix: wave on small screens

--- a/src/app.css
+++ b/src/app.css
@@ -111,18 +111,21 @@ li + li {
 .wave {
   z-index: 1;
   background: rgb(40, 37, 82);
-  background: linear-gradient(
-    0deg,
-    rgba(40, 37, 82, 1) 0%,
-    rgba(40, 37, 82, 1) 97%,
-    rgba(0, 212, 255, 0) 100%
-  );
+  background: url('/assets/illustrations/wave.svg'),
+    linear-gradient(
+      0deg,
+      rgba(40, 37, 82, 1) 0%,
+      rgba(40, 37, 82, 1) 97%,
+      rgba(0, 212, 255, 0) 100%
+    );
 
   transform: rotate(180deg);
 
+  height: 5rem;
+  background-size: contain;
+
   margin-left: -50vw;
   margin-right: -50vw;
-  max-width: 100vw;
   position: relative;
   right: 50%;
   left: 50%;
